force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/BMCServiceDesk__LookupFilter__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for lookup filters.</description>
    <label>Lookup Filter</label>
    <nameField>
        <label>Lookup Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>