force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__ApplyToSelfService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ApplyToSelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field applies lookup filters in Self Service.</description>
    <inlineHelpText>Select this field to apply lookup filters in Self Service.</inlineHelpText>
    <label>ApplyToSelfService</label>
    <type>Checkbox</type>
</CustomField>