force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__CMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CMDB_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores reference of the CMDB class on which filter is created.</description>
    <label>CMDB_Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>Lookup Filters</relationshipLabel>
    <relationshipName>Lookup_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>