force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__FilterFor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FilterFor__c</fullName>
    <description>This field stores the API name of the filter for object.</description>
    <inlineHelpText>From the list of options, select the Filter For object.</inlineHelpText>
    <label>Filter For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>