force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field marks the object as inactive.</description>
    <inlineHelpText>Select this field if the lookup object is no longer valid.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>