force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__QueryCondition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QueryCondition__c</fullName>
    <description>This field stores the query conditions.</description>
    <inlineHelpText>Use this field to enter the query conditions.</inlineHelpText>
    <label>Query Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>