force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/fields/BMCServiceDesk__ShowCIsLinkedTo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ShowCIsLinkedTo__c</fullName>
    <description>This field is used to filter CMDB records in SS3.0</description>
    <label>Show CIs Linked To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>