force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/validationRules/BMCServiceDesk__UniqueLookupFilterNameCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__UniqueLookupFilterNameCheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW(), NOT( ISBLANK( VLOOKUP( $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name , $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name , NULLVALUE(Name, Name) ) ) ) , IF( ISCHANGED(Name) , IF( LOWER( PRIORVALUE(Name) ) != LOWER(Name)  &amp;&amp; ( LOWER(Name) = LOWER( VLOOKUP($ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name, $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name, Name) ) ) , TRUE, FALSE) , FALSE) )</errorConditionFormula>
    <errorMessage>Filter name must be unique</errorMessage>
</ValidationRule>