force-app/main/default/objects/BMCServiceDesk__LookupFilter__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Console__c</columns>
    <columns>BMCServiceDesk__FilterFor__c</columns>
    <columns>BMCServiceDesk__FilterLogic__c</columns>
    <columns>BMCServiceDesk__FilterType__c</columns>
    <columns>BMCServiceDesk__Inactive__c</columns>
    <columns>BMCServiceDesk__ApplyToSelfService__c</columns>
    <columns>BMCServiceDesk__QueryCondition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>